--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
     "sweetalert2": "^11.14.5",
