--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7"
   },
