--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "concurrently": "^9.1.0",
     "firebase": "^11.0.2",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
